build/log/idf_py_stderr_output_12467
In file included from /home/vicenterey/esp/projects_tf/model/person_detection/main/image_provider.cc:23:
/home/vicenterey/esp/idf/esp-idf/components/spi_flash/include/esp_spi_flash.h:6:2: warning: #warning esp_spi_flash.h is deprecated, please use spi_flash_mmap.h instead [-Wcpp]
    6 | #warning esp_spi_flash.h is deprecated, please use spi_flash_mmap.h instead
      |  ^~~~~~~
In file included from /home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:18:
/home/vicenterey/esp/idf/esp-idf/components/driver/deprecated/driver/mcpwm.h:15:2: warning: #warning "legacy MCPWM driver is deprecated, please migrate to the new driver (include driver/mcpwm_prelude.h)" [-Wcpp]
   15 | #warning "legacy MCPWM driver is deprecated, please migrate to the new driver (include driver/mcpwm_prelude.h)"
      |  ^~~~~~~
In file included from /home/vicenterey/esp/projects_tf/model/person_detection/components/espressif__esp-tflite-micro/tensorflow/lite/micro/tflite_bridge/flatbuffer_conversions_bridge.h:19,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/components/espressif__esp-tflite-micro/tensorflow/lite/micro/micro_allocator.h:26,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/components/espressif__esp-tflite-micro/tensorflow/lite/micro/micro_interpreter.h:26,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:6:
/home/vicenterey/esp/projects_tf/model/person_detection/components/espressif__esp-tflite-micro/tensorflow/lite/core/api/flatbuffer_conversions.h: In member function 'T* tflite::BuiltinDataAllocator::AllocatePOD()':
/home/vicenterey/esp/projects_tf/model/person_detection/components/espressif__esp-tflite-micro/tensorflow/lite/core/api/flatbuffer_conversions.h:46:24: warning: 'template<class _Tp> struct std::is_pod' is deprecated: use 'is_standard_layout && is_trivial' instead [-Wdeprecated-declarations]
   46 |     static_assert(std::is_pod<T>::value, "Builtin data structure must be POD.");
      |                        ^~~~~~
In file included from /home/vicenterey/esp/idf-tools/tools/xtensa-esp-elf/esp-13.2.0_20240305/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/bits/stl_pair.h:60,
                 from /home/vicenterey/esp/idf-tools/tools/xtensa-esp-elf/esp-13.2.0_20240305/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/utility:69,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/components/espressif__esp-tflite-micro/tensorflow/lite/core/c/common.h:1463,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/components/espressif__esp-tflite-micro/tensorflow/lite/c/common.h:31,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.h:22,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:2:
/home/vicenterey/esp/idf-tools/tools/xtensa-esp-elf/esp-13.2.0_20240305/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/type_traits:819:5: note: declared here
  819 |     is_pod
      |     ^~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc: In function 'void mcpwm_example_gpio_initialize()':
/home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:35:21: error: 'MCPWN_UNIT_0' was not declared in this scope; did you mean 'MCPWM_UNIT_0'?
   35 |     mcpwn_gpio_init(MCPWN_UNIT_0, MCPWM0A, 15)
      |                     ^~~~~~~~~~~~
      |                     MCPWM_UNIT_0
/home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:35:5: error: 'mcpwn_gpio_init' was not declared in this scope; did you mean 'mcpwm_gpio_init'?
   35 |     mcpwn_gpio_init(MCPWN_UNIT_0, MCPWM0A, 15)
      |     ^~~~~~~~~~~~~~~
      |     mcpwm_gpio_init
make[3]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:118: esp-idf/main/CMakeFiles/__idf_main.dir/main_functions.cc.obj] Error 1
make[2]: *** [CMakeFiles/Makefile2:5675: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:2437: CMakeFiles/flash.dir/rule] Error 2
make: *** [Makefile:299: flash] Error 2
